// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MemorandumAddModalForm invoice render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form>
        <div
          class="PicassoModalTitle-root"
          data-testid="memo-title"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2"
          >
            Add Memorandum
          </h2>
        </div>
        <div
          class="PicassoModalContent-wrapper"
        >
          <div
            class="PicassoModalContent-modalContent"
          >
            <div
              class=""
              data-testid="ModalFormWarningText"
              style="margin-bottom: 2rem;"
            >
              <div
                class="PicassoContainer-redVariant PicassoContainer-mediumPadding PicassoContainer-rounded PicassoHelpbox-root"
              >
                <div
                  class="PicassoContainer-bottomsmallMargin"
                  data-testid="memo-warning-title"
                >
                  <h4
                    class="MuiTypography-root MuiTypography-h4"
                  >
                    Please note:
                  </h4>
                </div>
                <div
                  class="MuiTypography-root PicassoTypography-bodyMedium PicassoTypography-black MuiTypography-body1"
                  data-testid="memo-warning-text"
                >
                  Memorandums cannot be allocated to the paid invoice. The memorandum will be created as unallocated.
                </div>
              </div>
            </div>
            <div
              class="PicassoFormField-root"
              data-field-has-error="false"
              data-testid="memo-select-originalInvoiceId"
            >
              <label
                class="PicassoFormLabel-root"
                for="originalInvoiceId"
              >
                <span
                  class="PicassoFormLabel-medium"
                >
                  Original Invoice
                   (optional)
                </span>
              </label>
              <div
                class="makeStyles-root makeStyles-rootFull"
              >
                <div
                  class="makeStyles-inputWrapper"
                >
                  <input
                    name="originalInvoiceId"
                    type="hidden"
                    value=""
                  />
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoOutlinedInput-rootFull PicassoOutlinedInput-rootMedium makeStyles-outlinedInput MuiInputBase-fullWidth"
                    role="textbox"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="none"
                      class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium"
                      id="originalInvoiceId"
                      readonly=""
                      size="1"
                      type="text"
                      value=""
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline PicassoOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                  <svg
                    class="PicassoSvgDropdownArrows16-root makeStyles-caret"
                    style="min-width: 16px; min-height: 16px;"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="m10.997 10.29.707.707-3.707 3.707-3.707-3.707.707-.707 3 3 3-3Zm-3-9 3.707 3.707-.707.707-3-3-3 3-.707-.707 3-3 .707-.707Z"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="PicassoFormField-root"
              data-field-has-error="false"
              data-testid="memo-balanceType"
            >
              <label
                class="PicassoFormLabel-root"
                for="balanceType"
              >
                <span
                  class="PicassoFormLabel-medium"
                >
                  Balance Type
                </span>
              </label>
              <div
                class="MuiFormGroup-root"
                id="balanceType"
                role="radiogroup"
                type="radio"
              >
                <div
                  class="MuiGrid-root PicassoRadioGroup-grid MuiGrid-container PicassoGrid-container MuiGrid-spacing-xs MuiGrid-align-items-xs-flex"
                >
                  <div
                    class="MuiGrid-root PicassoRadioGroup-gridItem MuiGrid-item"
                  >
                    <label
                      class="PicassoFormControlLabel-root Radio-root Radio-labelWithRightSpacing"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root Radio-withLabel"
                        data-testid="trigger"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            class="PrivateSwitchBase-input"
                            name="balanceType"
                            type="radio"
                            value="DEBIT"
                          />
                          <div
                            class="Radio-uncheckedIcon"
                          />
                        </span>
                      </span>
                      <span
                        class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label Radio-label"
                      >
                        <span
                          class="PicassoFormLabel-medium"
                        >
                          Debit
                        </span>
                      </span>
                    </label>
                  </div>
                  <div
                    class="MuiGrid-root PicassoRadioGroup-gridItem MuiGrid-item"
                  >
                    <label
                      class="PicassoFormControlLabel-root Radio-root Radio-labelWithRightSpacing"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root Radio-withLabel"
                        data-testid="trigger"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            class="PrivateSwitchBase-input"
                            name="balanceType"
                            type="radio"
                            value="CREDIT"
                          />
                          <div
                            class="Radio-uncheckedIcon"
                          />
                        </span>
                      </span>
                      <span
                        class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label Radio-label"
                      >
                        <span
                          class="PicassoFormLabel-medium"
                        >
                          Credit
                        </span>
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="PicassoFormField-root"
              data-field-has-error="false"
              data-testid="memo-amount"
            >
              <label
                class="PicassoFormLabel-root"
                for="amount"
              >
                <span
                  class="PicassoFormLabel-medium"
                >
                  Amount
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoInput-root PicassoOutlinedInput-rootFull PicassoOutlinedInput-rootMedium MuiInputBase-fullWidth MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
              >
                <div
                  class="MuiInputAdornment-root PicassoInputAdornment-root MuiInputAdornment-disablePointerEvents MuiInputAdornment-positionStart"
                >
                  <svg
                    class="PicassoSvgReferralBonus16-root PicassoInput-icon"
                    style="min-width: 16px; min-height: 16px;"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="M9 14.5H7V16H6v-1.606c-1.472-.302-2.75-1.232-3.443-2.563l-.231-.443.886-.462.231.443c.52.998 1.46 1.717 2.557 1.999v-4.87a3.688 3.688 0 0 1-2.431-1.016A3.44 3.44 0 0 1 2.5 5c0-1.897 1.56-3.434 3.5-3.498V0h1v1.5h2V0h1v1.606c1.472.302 2.75 1.232 3.443 2.563l.231.443-.886.462-.231-.443c-.52-.998-1.46-1.717-2.557-1.999v4.87c1.94.064 3.5 1.6 3.5 3.498 0 1.897-1.56 3.434-3.5 3.498V16H9v-1.5Zm0-7v-5H7v5h2Zm0 6v-5H7v5h2Zm1-.003c1.396-.062 2.5-1.16 2.5-2.497 0-1.336-1.104-2.435-2.5-2.497v4.994ZM6 2.503C4.604 2.565 3.5 3.663 3.5 5c0 .659.273 1.292.762 1.76A2.687 2.687 0 0 0 6 7.498V2.503Z"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid="false"
                  autocomplete="off"
                  class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  id="amount"
                  name="amount"
                  placeholder="0.00"
                  type="text"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline PicassoOutlinedInput-notchedOutline"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="PrivateNotchedOutline-legend"
                    style="width: 0.01px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <div
              class="PicassoFormField-root"
              data-field-has-error="false"
              data-testid="memo-comment"
            >
              <label
                class="PicassoFormLabel-root"
                for="comment"
              >
                <span
                  class="PicassoFormLabel-medium"
                >
                  Comment
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoInput-root PicassoInput-rootMultiline PicassoOutlinedInput-rootFull PicassoOutlinedInput-rootMedium MuiInputBase-fullWidth MuiInputBase-multiline MuiOutlinedInput-multiline MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
              >
                <textarea
                  aria-invalid="false"
                  autocomplete="none"
                  class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoInput-inputMultilineResizable PicassoOutlinedInput-inputMedium MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline PicassoOutlinedInput-inputMultiline MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  id="comment"
                  name="comment"
                  placeholder="Please specify a reason."
                  rows="5"
                  style="height: 0px; overflow: hidden;"
                />
                <textarea
                  aria-hidden="true"
                  class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoInput-inputMultilineResizable PicassoOutlinedInput-inputMedium MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline PicassoOutlinedInput-inputMultiline MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  readonly=""
                  style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); width: 100%;"
                  tabindex="-1"
                />
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline PicassoOutlinedInput-notchedOutline"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="PrivateNotchedOutline-legend"
                    style="width: 0.01px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <div
              class="PicassoFormField-root"
              data-field-has-error="false"
              data-testid="notify-receiver-checkbox"
            >
              <label
                class="PicassoFormControlLabel-root PicassoCheckbox-root picasso-checkbox"
              >
                <span
                  class="PicassoContainer-flex PicassoContainer-inline PicassoCheckbox-checkboxWrapper"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root PicassoCheckbox-root MuiCheckbox-colorSecondary PicassoCheckbox-withLabel MuiIconButton-colorSecondary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input"
                        data-indeterminate="false"
                        id="notifyReceiver"
                        name="notifyReceiver"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="PicassoCheckbox-uncheckedIcon"
                      />
                    </span>
                  </span>
                </span>
                <span
                  class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label PicassoCheckbox-label"
                >
                  <span
                    class="PicassoFormLabel-medium"
                  >
                    Send the notification to Thad Walter.
                  </span>
                </span>
              </label>
            </div>
            <div
              class="PicassoFormField-root"
              data-field-has-error="false"
              data-testid="memo-affects-commissions"
            >
              <label
                class="PicassoFormControlLabel-root PicassoCheckbox-root picasso-checkbox"
              >
                <span
                  class="PicassoContainer-flex PicassoContainer-inline PicassoCheckbox-checkboxWrapper"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root PicassoCheckbox-root MuiCheckbox-colorSecondary PicassoCheckbox-withLabel MuiIconButton-colorSecondary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input"
                        data-indeterminate="false"
                        id="affectsCommissions"
                        name="affectsCommissions"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="PicassoCheckbox-uncheckedIcon"
                      />
                    </span>
                  </span>
                </span>
                <span
                  class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label PicassoCheckbox-label"
                >
                  <span
                    class="PicassoFormLabel-medium"
                  >
                    Allow memorandum to affect revenue for commission payouts.
                  </span>
                </span>
              </label>
            </div>
            <div
              class=""
              data-testid="ModalFormCommissionsWarning"
              style="margin-top: 1rem;"
            >
              <div
                class="PicassoContainer-redVariant PicassoContainer-mediumPadding PicassoContainer-rounded PicassoHelpbox-root"
              >
                <div
                  class="MuiTypography-root PicassoTypography-bodyMedium PicassoTypography-black MuiTypography-body1"
                  data-testid="ModalFormCommissionsWarning-affects-commissions-warning"
                >
                  Warning: performing this action will prevent the memo from impacting commission calculations.
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="InvoiceModalVariations"
        >
          <button
            class="MuiButtonBase-root PicassoButton-medium PicassoButton-positive PicassoButton-root"
            data-component-type="button"
            data-testid="submit"
            tabindex="0"
            type="submit"
          >
            <span
              class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
            >
              Add Memorandum
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`MemorandumAddModalForm payment render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form>
        <div
          class="PicassoModalTitle-root"
          data-testid="memo-title"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2"
          >
            Add Memorandum
          </h2>
        </div>
        <div
          class="PicassoModalContent-wrapper"
        >
          <div
            class="PicassoModalContent-modalContent"
          >
            <div
              class="PicassoFormField-root"
              data-field-has-error="false"
              data-testid="memo-balanceType"
            >
              <label
                class="PicassoFormLabel-root"
                for="balanceType"
              >
                <span
                  class="PicassoFormLabel-medium"
                >
                  Balance Type
                </span>
              </label>
              <div
                class="MuiFormGroup-root"
                id="balanceType"
                role="radiogroup"
                type="radio"
              >
                <div
                  class="MuiGrid-root PicassoRadioGroup-grid MuiGrid-container PicassoGrid-container MuiGrid-spacing-xs MuiGrid-align-items-xs-flex"
                >
                  <div
                    class="MuiGrid-root PicassoRadioGroup-gridItem MuiGrid-item"
                  >
                    <label
                      class="PicassoFormControlLabel-root Radio-root Radio-labelWithRightSpacing"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root Radio-withLabel"
                        data-testid="trigger"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            class="PrivateSwitchBase-input"
                            name="balanceType"
                            type="radio"
                            value="DEBIT"
                          />
                          <div
                            class="Radio-uncheckedIcon"
                          />
                        </span>
                      </span>
                      <span
                        class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label Radio-label"
                      >
                        <span
                          class="PicassoFormLabel-medium"
                        >
                          Debit
                        </span>
                      </span>
                    </label>
                  </div>
                  <div
                    class="MuiGrid-root PicassoRadioGroup-gridItem MuiGrid-item"
                  >
                    <label
                      class="PicassoFormControlLabel-root Radio-root Radio-labelWithRightSpacing"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root Radio-withLabel"
                        data-testid="trigger"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            class="PrivateSwitchBase-input"
                            name="balanceType"
                            type="radio"
                            value="CREDIT"
                          />
                          <div
                            class="Radio-uncheckedIcon"
                          />
                        </span>
                      </span>
                      <span
                        class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label Radio-label"
                      >
                        <span
                          class="PicassoFormLabel-medium"
                        >
                          Credit
                        </span>
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="PicassoFormField-root"
              data-field-has-error="false"
              data-testid="memo-amount"
            >
              <label
                class="PicassoFormLabel-root"
                for="amount"
              >
                <span
                  class="PicassoFormLabel-medium"
                >
                  Amount
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoInput-root PicassoOutlinedInput-rootFull PicassoOutlinedInput-rootMedium MuiInputBase-fullWidth MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
              >
                <div
                  class="MuiInputAdornment-root PicassoInputAdornment-root MuiInputAdornment-disablePointerEvents MuiInputAdornment-positionStart"
                >
                  <svg
                    class="PicassoSvgReferralBonus16-root PicassoInput-icon"
                    style="min-width: 16px; min-height: 16px;"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="M9 14.5H7V16H6v-1.606c-1.472-.302-2.75-1.232-3.443-2.563l-.231-.443.886-.462.231.443c.52.998 1.46 1.717 2.557 1.999v-4.87a3.688 3.688 0 0 1-2.431-1.016A3.44 3.44 0 0 1 2.5 5c0-1.897 1.56-3.434 3.5-3.498V0h1v1.5h2V0h1v1.606c1.472.302 2.75 1.232 3.443 2.563l.231.443-.886.462-.231-.443c-.52-.998-1.46-1.717-2.557-1.999v4.87c1.94.064 3.5 1.6 3.5 3.498 0 1.897-1.56 3.434-3.5 3.498V16H9v-1.5Zm0-7v-5H7v5h2Zm0 6v-5H7v5h2Zm1-.003c1.396-.062 2.5-1.16 2.5-2.497 0-1.336-1.104-2.435-2.5-2.497v4.994ZM6 2.503C4.604 2.565 3.5 3.663 3.5 5c0 .659.273 1.292.762 1.76A2.687 2.687 0 0 0 6 7.498V2.503Z"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid="false"
                  autocomplete="off"
                  class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  id="amount"
                  name="amount"
                  placeholder="0.00"
                  type="text"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline PicassoOutlinedInput-notchedOutline"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="PrivateNotchedOutline-legend"
                    style="width: 0.01px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <div
              class="PicassoFormField-root"
              data-field-has-error="false"
              data-testid="memo-comment"
            >
              <label
                class="PicassoFormLabel-root"
                for="comment"
              >
                <span
                  class="PicassoFormLabel-medium"
                >
                  Comment
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoInput-root PicassoInput-rootMultiline PicassoOutlinedInput-rootFull PicassoOutlinedInput-rootMedium MuiInputBase-fullWidth MuiInputBase-multiline MuiOutlinedInput-multiline MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
              >
                <textarea
                  aria-invalid="false"
                  autocomplete="none"
                  class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoInput-inputMultilineResizable PicassoOutlinedInput-inputMedium MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline PicassoOutlinedInput-inputMultiline MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  id="comment"
                  name="comment"
                  placeholder="Please specify a reason."
                  rows="5"
                  style="height: 0px; overflow: hidden;"
                />
                <textarea
                  aria-hidden="true"
                  class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoInput-inputMultilineResizable PicassoOutlinedInput-inputMedium MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline PicassoOutlinedInput-inputMultiline MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  readonly=""
                  style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); width: 100%;"
                  tabindex="-1"
                />
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline PicassoOutlinedInput-notchedOutline"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="PrivateNotchedOutline-legend"
                    style="width: 0.01px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <div
              class="PicassoFormField-root"
              data-field-has-error="false"
              data-testid="notify-receiver-checkbox"
            >
              <label
                class="PicassoFormControlLabel-root PicassoCheckbox-root picasso-checkbox"
              >
                <span
                  class="PicassoContainer-flex PicassoContainer-inline PicassoCheckbox-checkboxWrapper"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root PicassoCheckbox-root MuiCheckbox-colorSecondary PicassoCheckbox-withLabel MuiIconButton-colorSecondary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input"
                        data-indeterminate="false"
                        id="notifyReceiver"
                        name="notifyReceiver"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="PicassoCheckbox-uncheckedIcon"
                      />
                    </span>
                  </span>
                </span>
                <span
                  class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label PicassoCheckbox-label"
                >
                  <span
                    class="PicassoFormLabel-medium"
                  >
                    Send the notification to José Silva.
                  </span>
                </span>
              </label>
            </div>
          </div>
        </div>
        <div
          data-testid="InvoiceModalVariations"
        >
          <button
            class="MuiButtonBase-root PicassoButton-medium PicassoButton-positive PicassoButton-root"
            data-component-type="button"
            data-testid="submit"
            tabindex="0"
            type="submit"
          >
            <span
              class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
            >
              Add Memorandum
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`MemorandumAddModalForm role render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form>
        <div
          class="PicassoModalTitle-root"
          data-testid="memo-title"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2"
          >
            Add Memorandum
          </h2>
        </div>
        <div
          class="PicassoModalContent-wrapper"
        >
          <div
            class="PicassoModalContent-modalContent"
          >
            <div
              class=""
              style="margin-bottom: 2rem;"
            >
              <p
                class="MuiTypography-root PicassoTypography-bodyMedium MuiTypography-body1"
                data-testid="MemorandumAddModalForm-intro"
              >
                A memorandum will be automatically allocated when a new document is created.
              </p>
            </div>
            <div
              data-testid="ModalFormReceiver"
            />
            <div
              class="PicassoFormField-root"
              data-field-has-error="false"
              data-testid="memo-balanceType"
            >
              <label
                class="PicassoFormLabel-root"
                for="balanceType"
              >
                <span
                  class="PicassoFormLabel-medium"
                >
                  Balance Type
                </span>
              </label>
              <div
                class="MuiFormGroup-root"
                id="balanceType"
                role="radiogroup"
                type="radio"
              >
                <div
                  class="MuiGrid-root PicassoRadioGroup-grid MuiGrid-container PicassoGrid-container MuiGrid-spacing-xs MuiGrid-align-items-xs-flex"
                >
                  <div
                    class="MuiGrid-root PicassoRadioGroup-gridItem MuiGrid-item"
                  >
                    <label
                      class="PicassoFormControlLabel-root Radio-root Radio-labelWithRightSpacing"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root Radio-withLabel"
                        data-testid="trigger"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            class="PrivateSwitchBase-input"
                            name="balanceType"
                            type="radio"
                            value="DEBIT"
                          />
                          <div
                            class="Radio-uncheckedIcon"
                          />
                        </span>
                      </span>
                      <span
                        class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label Radio-label"
                      >
                        <span
                          class="PicassoFormLabel-medium"
                        >
                          Debit
                        </span>
                      </span>
                    </label>
                  </div>
                  <div
                    class="MuiGrid-root PicassoRadioGroup-gridItem MuiGrid-item"
                  >
                    <label
                      class="PicassoFormControlLabel-root Radio-root Radio-labelWithRightSpacing"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root Radio-withLabel"
                        data-testid="trigger"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            class="PrivateSwitchBase-input"
                            name="balanceType"
                            type="radio"
                            value="CREDIT"
                          />
                          <div
                            class="Radio-uncheckedIcon"
                          />
                        </span>
                      </span>
                      <span
                        class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label Radio-label"
                      >
                        <span
                          class="PicassoFormLabel-medium"
                        >
                          Credit
                        </span>
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="PicassoFormField-root"
              data-field-has-error="false"
              data-testid="memo-amount"
            >
              <label
                class="PicassoFormLabel-root"
                for="amount"
              >
                <span
                  class="PicassoFormLabel-medium"
                >
                  Amount
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoInput-root PicassoOutlinedInput-rootFull PicassoOutlinedInput-rootMedium MuiInputBase-fullWidth MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
              >
                <div
                  class="MuiInputAdornment-root PicassoInputAdornment-root MuiInputAdornment-disablePointerEvents MuiInputAdornment-positionStart"
                >
                  <svg
                    class="PicassoSvgReferralBonus16-root PicassoInput-icon"
                    style="min-width: 16px; min-height: 16px;"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="M9 14.5H7V16H6v-1.606c-1.472-.302-2.75-1.232-3.443-2.563l-.231-.443.886-.462.231.443c.52.998 1.46 1.717 2.557 1.999v-4.87a3.688 3.688 0 0 1-2.431-1.016A3.44 3.44 0 0 1 2.5 5c0-1.897 1.56-3.434 3.5-3.498V0h1v1.5h2V0h1v1.606c1.472.302 2.75 1.232 3.443 2.563l.231.443-.886.462-.231-.443c-.52-.998-1.46-1.717-2.557-1.999v4.87c1.94.064 3.5 1.6 3.5 3.498 0 1.897-1.56 3.434-3.5 3.498V16H9v-1.5Zm0-7v-5H7v5h2Zm0 6v-5H7v5h2Zm1-.003c1.396-.062 2.5-1.16 2.5-2.497 0-1.336-1.104-2.435-2.5-2.497v4.994ZM6 2.503C4.604 2.565 3.5 3.663 3.5 5c0 .659.273 1.292.762 1.76A2.687 2.687 0 0 0 6 7.498V2.503Z"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid="false"
                  autocomplete="off"
                  class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoOutlinedInput-inputMedium MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  id="amount"
                  name="amount"
                  placeholder="0.00"
                  type="text"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline PicassoOutlinedInput-notchedOutline"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="PrivateNotchedOutline-legend"
                    style="width: 0.01px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <div
              class="PicassoFormField-root"
              data-field-has-error="false"
              data-testid="memo-comment"
            >
              <label
                class="PicassoFormLabel-root"
                for="comment"
              >
                <span
                  class="PicassoFormLabel-medium"
                >
                  Comment
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root PicassoOutlinedInput-root PicassoInput-root PicassoInput-rootMultiline PicassoOutlinedInput-rootFull PicassoOutlinedInput-rootMedium MuiInputBase-fullWidth MuiInputBase-multiline MuiOutlinedInput-multiline MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
              >
                <textarea
                  aria-invalid="false"
                  autocomplete="none"
                  class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoInput-inputMultilineResizable PicassoOutlinedInput-inputMedium MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline PicassoOutlinedInput-inputMultiline MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  id="comment"
                  name="comment"
                  placeholder="Please specify a reason."
                  rows="5"
                  style="height: 0px; overflow: hidden;"
                />
                <textarea
                  aria-hidden="true"
                  class="MuiInputBase-input MuiOutlinedInput-input PicassoOutlinedInput-input PicassoInput-inputMultilineResizable PicassoOutlinedInput-inputMedium MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline PicassoOutlinedInput-inputMultiline MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  readonly=""
                  style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); width: 100%;"
                  tabindex="-1"
                />
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline PicassoOutlinedInput-notchedOutline"
                  style="padding-left: 8px;"
                >
                  <legend
                    class="PrivateNotchedOutline-legend"
                    style="width: 0.01px;"
                  >
                    <span>
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <div
              class="PicassoFormField-root"
              data-field-has-error="false"
              data-testid="notify-receiver-checkbox"
            >
              <label
                class="PicassoFormControlLabel-root PicassoCheckbox-root picasso-checkbox"
              >
                <span
                  class="PicassoContainer-flex PicassoContainer-inline PicassoCheckbox-checkboxWrapper"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root PicassoCheckbox-root MuiCheckbox-colorSecondary PicassoCheckbox-withLabel MuiIconButton-colorSecondary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input"
                        data-indeterminate="false"
                        id="notifyReceiver"
                        name="notifyReceiver"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="PicassoCheckbox-uncheckedIcon"
                      />
                    </span>
                  </span>
                </span>
                <span
                  class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label PicassoCheckbox-label"
                >
                  <span
                    class="PicassoFormLabel-medium"
                  >
                    Send the notification to receiver.
                  </span>
                </span>
              </label>
            </div>
            <div
              class="PicassoFormField-root"
              data-field-has-error="false"
              data-testid="memo-affects-commissions"
            >
              <label
                class="PicassoFormControlLabel-root PicassoCheckbox-root picasso-checkbox"
              >
                <span
                  class="PicassoContainer-flex PicassoContainer-inline PicassoCheckbox-checkboxWrapper"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root PicassoCheckbox-root MuiCheckbox-colorSecondary PicassoCheckbox-withLabel MuiIconButton-colorSecondary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input"
                        data-indeterminate="false"
                        id="affectsCommissions"
                        name="affectsCommissions"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="PicassoCheckbox-uncheckedIcon"
                      />
                    </span>
                  </span>
                </span>
                <span
                  class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label PicassoCheckbox-label"
                >
                  <span
                    class="PicassoFormLabel-medium"
                  >
                    Allow memorandum to affect revenue for commission payouts.
                  </span>
                </span>
              </label>
            </div>
            <div
              class=""
              data-testid="ModalFormCommissionsWarning"
              style="margin-top: 1rem;"
            >
              <div
                class="PicassoContainer-redVariant PicassoContainer-mediumPadding PicassoContainer-rounded PicassoHelpbox-root"
              >
                <div
                  class="MuiTypography-root PicassoTypography-bodyMedium PicassoTypography-black MuiTypography-body1"
                  data-testid="ModalFormCommissionsWarning-affects-commissions-warning"
                >
                  Warning: performing this action will prevent the memo from impacting commission calculations.
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="InvoiceModalVariations"
        >
          <button
            class="MuiButtonBase-root PicassoButton-medium PicassoButton-positive PicassoButton-root"
            data-component-type="button"
            data-testid="submit"
            tabindex="0"
            type="submit"
          >
            <span
              class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline PicassoButton-content"
            >
              Add Memorandum
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
